# attractor

./: README.md  unified-llm-simple-spec-cn.md  工程方案结构化写作.md  类型定义语法规则.md
attractor-py/: .coverage  COMPLETION.md  README.md  pyproject.toml  test_results.txt
attractor-py/examples/: simple_pipeline.py
attractor-py/examples/pipelines/: hello.dot
attractor-py/src/attractor/: __init__.py  conditions.py  server.py  stylesheet.py
attractor-py/src/attractor/engine/: __init__.py  edge_selection.py  executor.py  retry.py
attractor-py/src/attractor/handlers/: __init__.py  basic.py  codergen.py  conditional.py  human.py  interface.py  parallel.py
attractor-py/src/attractor/models/: __init__.py  checkpoint.py  context.py  graph.py
attractor-py/tests/: conftest.py  test_conditions.py  test_server.py  test_stylesheet.py
attractor-py/tests/engine/: __init__.py  test_edge_selection.py  test_executor.py  test_retry.py
attractor-py/tests/handlers/: __init__.py  test_basic.py  test_codergen.py  test_conditional.py  test_human.py  test_interface.py  test_parallel.py
attractor-py/tests/integration/: test_human_interaction.py  test_smoke.py
attractor-py/tests/models/: test_checkpoint.py  test_context.py  test_graph.py
attractor-py/tests/parser/: __init__.py  test_lexer.py  test_parser.py
attractor-py/tests/validator/: __init__.py  test_models.py  test_rules.py  test_validator.py
cn/: README-cn.md  (+3 more)
coding-agent-py/: .env.example  .gitignore  README.md  pyproject.toml
coding-agent-py/examples/: basic_usage.py  with_steering.py
coding-agent-py/src/coding_agent/: __init__.py  session.py
coding-agent-py/tests/: __init__.py  conftest.py  test_session.py
coding-agent-py/tests/exec/: test_environment.py
coding-agent-py/tests/integration/: __init__.py  test_llm_integration.py
coding-agent-py/tests/models/: test_config.py  test_event.py  test_turn.py
coding-agent-py/tests/providers/: test_profile.py
coding-agent-py/tests/tools/: test_file_tools.py  test_registry.py  test_search_tools.py
coding-agent-py/tests/utils/: test_loop_detection.py  test_truncation.py
(+68 files in other folders)
